--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-builders/custom-webpack": "^13.0.0",
     "@angular/animations": "~13.0.0",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
     "@angular/core": "~13.0.0",
     "@angular/forms": "~13.0.0",
+    "@angular/material": "^13.0.3",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "bootstrap": "^5.1.3",
+    "path-browserify": "^1.0.1",
     "rxjs": "~7.4.0",
+    "sass-loader": "^12.3.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -35,6 +39,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "node-sass": "^6.0.1",
     "typescript": "~4.4.3"
   }
 }
