--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,6 +2,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "paths": {
+      "path": [ "./node_modules/path-browserify" ]
+    },
     "outDir": "./out-tsc/app",
     "types": []
   },
